--- a/.npmignore
+++ b/.npmignore
@@ -1,13 +1,15 @@
-.git
-.nyc_output
-build/
-node_modules/
-src/
-tests/
 .env
-.env.yaml
 .env*
+.env.yaml
 .gcloudignore
 .node-version
-cloudbuild.yaml
+/.circleci/
+/.git
+/.nyc_output
+/.travis.yml
+/build/
+/cloudbuild.yaml
+/node_modules/
+/src/
+/tests/
 tslint.json
