Make Swift trailing comma mandatory

--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -1,5 +1,3 @@
-disabled_rules:
-  - trailing_comma
 opt_in_rules:
   - anyobject_protocol
   - array_init
@@ -50,6 +48,7 @@ opt_in_rules:
   - sorted_first_last
   - sorted_imports
   - switch_case_on_newline
+  - trailing_comma
   - unavailable_function
   - unneeded_parentheses_in_closure_argument
   - untyped_error_in_catch
@@ -74,5 +73,8 @@ file_header:
     //  See the License for the specific language governing permissions and
     //  limitations under the License.
 
+trailing_comma:
+  mandatory_comma: true
+  severity: error
 excluded:
   - .build
