Update to ignore Linux generated methods

--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -78,3 +78,9 @@ trailing_comma:
   severity: error
 excluded:
   - .build
+file_name:
+  excluded: ['XCTestManifests.swift']
+identifier_name:
+  excluded:
+    - __allTests
+    - __allTests()
