--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -14,6 +14,7 @@ opt_in_rules:
   - empty_xctest_method
   - explicit_init
   - explicit_top_level_acl
+  - explicit_type_interface
   - extension_access_modifier
   - fatal_error_message
   - file_header
